--- a/tester.html
+++ b/tester.html
@@ -26,25 +26,22 @@
 		</ul>
 	</header>
 
-	<footer class="grid-layout _4-grid">
-		<img class="logo" src="https://i.gyazo.com/edbe81cd9cca2d2988ecf8a76b22ada2.png" />
-		<div class="section-contact">
-			<h3>Contact</h3>
-			<p>contact@tantinotte.bio</p>
-			<p>06 12 34 56 78</p>
+	<footer class="grid-layout _3-grid">
+		<div>
+			<img class="logo" src="https://i.gyazo.com/6f384b472fcff3b4da6fc31b40a82d78.png" />
+			<div class="section-share">
+				<i class="fab fa-facebook"></i>
+				<i class="fab fa-instagram"></i>
+				<i class="fab fa-youtube"></i>
+			</div>
+			<p class="copyright">Tantinotte.bio © Tous droits réservés</p>
 		</div>
 		<ul>
-			<h3>Liens</h3>
 			<li>Paiement et livraison</li>
-			<li>Conditions générales de vente</li>
-			<li>Mentions légales</li>
-			<li>Politique de confidentialité</li>
 		</ul>
-		<div class="section-share">
-			<i class="fab fa-facebook"></i>
-			<i class="fab fa-instagram"></i>
-			<i class="fab fa-youtube"></i>
-		</div>
+		<ul>
+			<li>Mentions légales & confidentialité</li>
+		</ul>
 	</footer>
 </body>
 </html>
